test/interaction/Issue1339.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : U " nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-info-action "*Error*" "Issue1339.agda:11.7-12: error: [SplitError.CoinductiveDatatype] Cannot pattern match on the coinductive type U when checking that the expression ? has type U" nil)
((last . 3) . (agda2-maybe-goto '("Issue1339.agda" . 148)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
